--- a/release10.0.0/semantic-apis/oas3/yamls/KnowledgeExchange.yaml
+++ b/release10.0.0/semantic-apis/oas3/yamls/KnowledgeExchange.yaml
@@ -276,25 +276,25 @@ paths:
           $ref: '#/components/responses/TooManyRequestsError'
         500:
           $ref: '#/components/responses/InternalServerError'
-  /KnowledgeExchange/{knowledgeexchangeId}/Review,RefinementandEditing/{review,refinementandeditingId}/Exchange:
+  /KnowledgeExchange/{knowledgeexchangeId}/ReviewRefinementandEditing/{reviewrefinementandeditingId}/Exchange:
     put:
       tags:
-      - BQ - Review,RefinementandEditing
+      - BQ - ReviewRefinementandEditing
       summary: EcBQ Accept, verify, etc. aspects of Review, Refinement and Editing processing
       description: EcBQ Accept, verify, etc. aspects of Review, Refinement and Editing processing
-      operationId: ExchangeReview,RefinementandEditing
+      operationId: ExchangeReviewRefinementandEditing
       parameters:
       - $ref: '#/components/parameters/KnowledgeExchangeID'
-      - $ref: '#/components/parameters/Review,RefinementandEditingID'
+      - $ref: '#/components/parameters/ReviewRefinementandEditingID'
       requestBody:
-        $ref: '#/components/requestBodies/Review,RefinementandEditing'
+        $ref: '#/components/requestBodies/ReviewRefinementandEditing'
       responses:
         200:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Review,RefinementandEditing'
+                $ref: '#/components/schemas/ReviewRefinementandEditing'
         400:
           $ref: '#/components/responses/BadRequestError'
         401:
@@ -484,23 +484,23 @@ paths:
           $ref: '#/components/responses/TooManyRequestsError'
         500:
           $ref: '#/components/responses/InternalServerError'
-  /KnowledgeExchange/{knowledgeexchangeId}/Review,RefinementandEditing/{review,refinementandeditingId}/Retrieve:
+  /KnowledgeExchange/{knowledgeexchangeId}/ReviewRefinementandEditing/{reviewrefinementandeditingId}/Retrieve:
     get:
       tags:
-      - BQ - Review,RefinementandEditing
+      - BQ - ReviewRefinementandEditing
       summary: ReBQ Retrieve details about any aspect of Review, Refinement and Editing
       description: ReBQ Retrieve details about any aspect of Review, Refinement and Editing
-      operationId: RetrieveReview,RefinementandEditing
+      operationId: RetrieveReviewRefinementandEditing
       parameters:
       - $ref: '#/components/parameters/KnowledgeExchangeID'
-      - $ref: '#/components/parameters/Review,RefinementandEditingID'
+      - $ref: '#/components/parameters/ReviewRefinementandEditingID'
       responses:
         200:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Review,RefinementandEditing'
+                $ref: '#/components/schemas/ReviewRefinementandEditing'
         400:
           $ref: '#/components/responses/BadRequestError'
         401:
@@ -668,25 +668,25 @@ paths:
           $ref: '#/components/responses/TooManyRequestsError'
         500:
           $ref: '#/components/responses/InternalServerError'
-  /KnowledgeExchange/{knowledgeexchangeId}/Review,RefinementandEditing/{review,refinementandeditingId}/Update:
+  /KnowledgeExchange/{knowledgeexchangeId}/ReviewRefinementandEditing/{reviewrefinementandeditingId}/Update:
     put:
       tags:
-      - BQ - Review,RefinementandEditing
+      - BQ - ReviewRefinementandEditing
       summary: UpBQ Update details relating to Review, Refinement and Editing
       description: UpBQ Update details relating to Review, Refinement and Editing
-      operationId: UpdateReview,RefinementandEditing
+      operationId: UpdateReviewRefinementandEditing
       parameters:
       - $ref: '#/components/parameters/KnowledgeExchangeID'
-      - $ref: '#/components/parameters/Review,RefinementandEditingID'
+      - $ref: '#/components/parameters/ReviewRefinementandEditingID'
       requestBody:
-        $ref: '#/components/requestBodies/Review,RefinementandEditing'
+        $ref: '#/components/requestBodies/ReviewRefinementandEditing'
       responses:
         200:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Review,RefinementandEditing'
+                $ref: '#/components/schemas/ReviewRefinementandEditing'
         400:
           $ref: '#/components/responses/BadRequestError'
         401:
@@ -767,24 +767,24 @@ components:
           type: string
         KnowledgeExchangeProvision:
           type: string
-    Review,RefinementandEditing:
+    ReviewRefinementandEditing:
       type: object
       properties:
-        Review,RefinementandEditingPreconditions:
+        ReviewRefinementandEditingPreconditions:
           type: string
-        Review,RefinementandEditingFunctionSchedule:
+        ReviewRefinementandEditingFunctionSchedule:
           type: string
-        ContentReview,RefinementandEditing:
+        ContentReviewRefinementandEditing:
           type: object
-        ContentReview,RefinementandEditingServiceType:
+        ContentReviewRefinementandEditingServiceType:
           type: string
-        ContentReview,RefinementandEditingServiceDescription:
+        ContentReviewRefinementandEditingServiceDescription:
           type: string
-        ContentReview,RefinementandEditingServiceInputsandOuputs:
+        ContentReviewRefinementandEditingServiceInputsandOuputs:
           type: string
-        ContentReview,RefinementandEditingServiceWorkProduct:
+        ContentReviewRefinementandEditingServiceWorkProduct:
           type: string
-        ContentReview,RefinementandEditingServiceName:
+        ContentReviewRefinementandEditingServiceName:
           type: string
     IndexingandPublication:
       type: object
@@ -962,8 +962,8 @@ components:
       explode: false
       schema:
         type: string
-    Review,RefinementandEditingID:
-      name: review,refinementandeditingId
+    ReviewRefinementandEditingID:
+      name: reviewrefinementandeditingId
       in: path
       required: true
       style: simple
@@ -1005,12 +1005,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/IndexingandPublication'
-    Review,RefinementandEditing:
+    ReviewRefinementandEditing:
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Review,RefinementandEditing'
+            $ref: '#/components/schemas/ReviewRefinementandEditing'
     MaintenanceandAccessAdministration:
       required: true
       content:
